2002-07-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/greentop.shp: new paperdoll art. Thanks sbx!
	* usecode/ucxt/Makefile.am: fixed --disable-tools

2002-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Spellbook_gump.cc: fixed up offsets; fixed NULL shape error

2002-07-14  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Fixed bug that was corrupting
	moongates in the sphere-generator, and added fix for old games.

2002-07-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* chunks.cc: worked around compiler bug (gcc 2.96-110) for is_blocked

2002-07-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: removed --enable-usecode-debugger (it's 1.1.x only)
	* exult.cc: undo double click change. (it broke gumps)
	* ucinternal.cc: disable usecode debugging a bit more aggressively

2002-07-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: allow (but ignore) large changes to loop arrays

2002-07-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: don't count dragging for double clicks

2002-07-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: allow small changes to loop-array in mid-loop in SI
	* effects.*: 'backported' delayed-blast fix from main branch
	* useval.*: added operator!= (and changed operator== to return bool)
	* objs.cc: removed "x's ashes" code again. (not correct)
	* objs.cc: fixed "x's ashes" code for teleported urn at start

2002-07-05  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* actors.cc: Magic boots keep you from getting poisoned in swamp
	(in SI).

2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: fixed --buildmap

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* autogen.sh: fixed problem when automake was compiled with aclocal
	data directory /usr/local/share/aclocal
